MF-406 - Replace VerneMQ with Mosquitto for MQTT broker
Signed-off-by: Manuel Imperiale <manuel.imperiale@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -276,17 +276,15 @@ services:
     networks:
       - mainfluxlabs-base-net
 
-  vernemq:
-    image: ${MF_RELEASE_PREFIX}/vernemq:0.13.2
-    container_name: mainfluxlabs-vernemq
+  mosquitto:
+    image: eclipse-mosquitto:2.0
+    container_name: mainfluxlabs-mosquitto
     restart: on-failure
-    environment:
-      DOCKER_VERNEMQ_ALLOW_ANONYMOUS: ${MF_DOCKER_VERNEMQ_ALLOW_ANONYMOUS}
-      DOCKER_VERNEMQ_LOG__CONSOLE__LEVEL: ${MF_DOCKER_VERNEMQ_LOG__CONSOLE__LEVEL}
     networks:
       - mainfluxlabs-base-net
     volumes:
-      - mainfluxlabs-mqtt-broker-volume:/var/lib/vernemq
+      - mainfluxlabs-mqtt-broker-volume:/mosquitto/data
+      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
   mqtt-db:
     image: postgres:13.3-alpine
@@ -305,7 +303,7 @@ services:
     image: ${MF_RELEASE_PREFIX}/mqtt:${MF_RELEASE_TAG}
     container_name: mainfluxlabs-mqtt
     depends_on:
-      - vernemq
+      - mosquitto
       - things
       - broker
       - mqtt-db
@@ -317,10 +315,10 @@ services:
       MF_MQTT_ADAPTER_HTTP_PORT: ${MF_MQTT_ADAPTER_HTTP_PORT}
       MF_MQTT_ADAPTER_FORWARDER: ${MF_MQTT_ADAPTER_FORWARDER}
       MF_BROKER_URL: ${MF_BROKER_URL}
-      MF_MQTT_ADAPTER_MQTT_TARGET_HOST: vernemq
+      MF_MQTT_ADAPTER_MQTT_TARGET_HOST: mosquitto
       MF_MQTT_ADAPTER_MQTT_TARGET_PORT: ${MF_MQTT_BROKER_PORT}
-      MF_MQTT_ADAPTER_MQTT_TARGET_HEALTH_CHECK: http://vernemq:8888/health
-      MF_MQTT_ADAPTER_WS_TARGET_HOST: vernemq
+      MF_MQTT_ADAPTER_MQTT_TARGET_HEALTH_CHECK: ""
+      MF_MQTT_ADAPTER_WS_TARGET_HOST: mosquitto
       MF_MQTT_ADAPTER_WS_TARGET_PORT: ${MF_MQTT_BROKER_WS_PORT}
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
