--- a/api/openapi/rules.yml
+++ b/api/openapi/rules.yml
@@ -221,8 +221,8 @@ paths:
         '500':
           $ref: "#/components/responses/ServiceError"
     get:
-      summary: Retrieves Scripts by group
-      description: Retrieves list of Lua scripts related to a certain group identified by the provided ID.
+      summary: Retrieve Scripts by Group.
+      description: Retrieves a list of Lua scripts related to a certain group identified by the provided ID.
       tags:
         - scripts
       parameters:
@@ -242,8 +242,8 @@ paths:
           $ref: "#/components/responses/ServiceError"
   /things/{thingId}/scripts:
     get:
-      summary: Retrieves scripts assigned to a thing
-      description: Retrieves list of Lua scripts assigned to a specific thing identified by the provided ID.
+      summary: Retrieve Scripts assigned to a Thing.
+      description: Retrieves a list of Lua scripts assigned to a specific Thing identified by the provided ID.
       tags:
         - scripts
       parameters:
@@ -262,8 +262,8 @@ paths:
         '500':
           $ref: "#/components/responses/ServiceError"
     post:
-      summary: Assigns Scripts to a Thing.
-      description: Assigns Lua scripts to a specific thing identified by the provided ID.
+      summary: Assign Scripts to a Thing.
+      description: Assigns one or more Lua scripts to a specific thing identified by the provided ID.
       tags:
         - scripts
       parameters:
@@ -286,7 +286,7 @@ paths:
         '500':
           $ref: "#/components/responses/ServiceError"
     patch:
-      summary: Unassigns Scripts from Thing.
+      summary: Unassign Scripts from Thing.
       description: Unassigns Lua scripts from a specific thing identified by the provided ID.
       tags:
         - scripts
@@ -311,8 +311,8 @@ paths:
           $ref: "#/components/responses/ServiceError"
   /scripts/{scriptId}/things:
     get:
-      summary: Retrieves list of IDs of Things assigned a specific Script identified by the provided ID.
-      description: Retrieves list of IDs of Things assigned a specific Script identified by the provided ID.
+      summary: Retrieve list of IDs of Things assigned a specific Script identified by the provided ID.
+      description: Retrieve list of IDs of Things assigned a specific Script identified by the provided ID.
       tags:
         - scripts
       parameters:
@@ -334,7 +334,7 @@ paths:
           $ref: "#/components/responses/ServiceError"
   /scripts/{scriptId}:
     get:
-      summary: Retrieve Script.
+      summary: Retrieve a specific Script.
       tags:
         - scripts
       parameters:
@@ -351,7 +351,7 @@ paths:
         '500':
           $ref: "#/components/responses/ServiceError"
     put:
-      summary: Update Script.
+      summary: Update a specific Script.
       description: Update script data.
       tags:
         - scripts
@@ -375,7 +375,7 @@ paths:
   /scripts:
     patch:
       summary: Remove scripts.
-      description: Removes one or more Lua scripts with provided IDs.
+      description: Remove one or more Lua scripts with provided IDs.
       tags:
         - scripts
       requestBody:
@@ -391,8 +391,8 @@ paths:
           $ref: "#/components/responses/ServiceError"
   /things/{thingId}/runs:
     get:
-      summary: Retrieves script runs for a Thing.
-      description: Retrieves list of script run history for a specific Thing identified by the provided ID.
+      summary: Retrieve Script runs for a Thing.
+      description: Retrieve a list of script run history for a specific Thing identified by the provided ID.
       tags:
         - script-runs
       parameters:
@@ -413,7 +413,7 @@ paths:
   /runs:
     patch:
       summary: Removes script runs
-      description: Removes script run records with provided IDs.
+      description: Remove script run records with provided IDs..
       tags:
         - script-runs
       requestBody:
