--- a/api/openapi/downlinks.yml
+++ b/api/openapi/downlinks.yml
@@ -86,6 +86,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/DownlinkRes"
+        '400':
+          description: Failed due to malformed request.
         '401':
           description: Missing or invalid access token provided.
         '404':
@@ -161,7 +163,7 @@ paths:
         '201':
           description: Downlinks restored.
         '400':
-          description: Failed due to malformed JSON.
+          description: Failed due to malformed or invalid backup file.
         '401':
           description: Missing or invalid access token provided.
         '415':
@@ -197,7 +199,7 @@ components:
           example: "daily"
         date_time:
           type: string
-          description: ISO 8601 date-time string, required when frequency is "once".
+          description: ISO 8601 date-time string. Required when frequency is "once"; ignored otherwise.
           example: "2024-06-01T08:00:00"
         week:
           $ref: "#/components/schemas/Week"
@@ -298,6 +300,7 @@ components:
           example: "https://api.example.com/readings"
         method:
           type: string
+          enum: [GET, POST, PUT, PATCH]
           example: "GET"
         payload:
           type: string
@@ -365,6 +368,7 @@ components:
       name: offset
       in: query
       required: false
+      description: Number of items to skip.
       schema:
         type: integer
         minimum: 0
@@ -372,6 +376,7 @@ components:
       name: limit
       in: query
       required: false
+      description: Maximum number of items to return.
       schema:
         type: integer
         minimum: 1
@@ -439,19 +444,13 @@ components:
               - "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
               - "b2c3d4e5-f6a7-8901-bcde-f12345678901"
     RestoreReq:
-      description: JSON-formatted backup document to restore downlinks from.
+      description: Backup file previously exported via the backup endpoint.
       required: true
       content:
         application/octet-stream:
           schema:
-            type: object
-            properties:
-              downlinks:
-                type: array
-                items:
-                  $ref: "#/components/schemas/DownlinkResSchema"
-            required:
-              - downlinks
+            type: string
+            format: binary
 
   responses:
     CreateDownlinksRes:
@@ -527,6 +526,12 @@ components:
                   frequency: "hourly"
                   hour: 1
                   time_zone: "UTC"
+                time_filter:
+                  start_param: "from"
+                  end_param: "to"
+                  format: "iso8601"
+                  interval: "hour"
+                  value: 1
     BackupRes:
       description: Downlinks backup file.
       content:
