--- a/api/openapi/uiconfigs.yml
+++ b/api/openapi/uiconfigs.yml
@@ -16,6 +16,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/OrgConfigRes"
+        '400':
+          description: Failed due to malformed request.
         '401':
           description: Missing or invalid access token provided.
         '403':
@@ -81,6 +83,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/ThingConfigRes"
+        '400':
+          description: Failed due to malformed request.
         '401':
           description: Missing or invalid access token provided.
         '403':
@@ -185,6 +189,7 @@ components:
             theme: "dark"
             language: "en"
             dashboard_layout: "grid"
+      required: [org_id, config]
 
     ThingConfig:
       type: object
@@ -204,6 +209,7 @@ components:
             chart_type: "line"
             unit: "°C"
             decimals: 2
+      required: [thing_id, group_id, config]
 
     OrgsConfigsPageRes:
       type: object
@@ -264,6 +270,7 @@ components:
       name: offset
       in: query
       required: false
+      description: Number of items to skip.
       schema:
         type: integer
         minimum: 0
@@ -271,6 +278,7 @@ components:
       name: limit
       in: query
       required: false
+      description: Maximum number of items to return.
       schema:
         type: integer
         minimum: 1
@@ -314,21 +322,13 @@ components:
               unit: "°C"
               decimals: 2
     RestoreReq:
-      description: JSON-formatted backup document to restore org and thing configs from.
+      description: Backup file previously exported via the backup endpoint.
       required: true
       content:
         application/octet-stream:
           schema:
-            type: object
-            properties:
-              orgs_configs:
-                type: array
-                items:
-                  $ref: "#/components/schemas/OrgConfig"
-              things_configs:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ThingConfig"
+            type: string
+            format: binary
 
   responses:
     OrgConfigRes:
