MF-1088 -   Use consistent URLs for Redis cache and event store
Signed-off-by: Maja Birmancevic <majabi2001@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -61,9 +61,7 @@ MF_AUTH_DB_PASS=mainflux
 MF_AUTH_DB=auth
 MF_AUTH_SECRET=secret
 MF_AUTH_LOGIN_TOKEN_DURATION=10h
-MF_AUTH_ES_URL=localhost:6379
-MF_AUTH_ES_PASS=
-MF_AUTH_ES_DB=0
+MF_AUTH_ES_URL=redis://localhost:6379/0
 
 ### Users
 MF_USERS_LOG_LEVEL=debug
@@ -107,9 +105,7 @@ MF_THINGS_DB_PORT=5432
 MF_THINGS_DB_USER=mainflux
 MF_THINGS_DB_PASS=mainflux
 MF_THINGS_DB=things
-MF_THINGS_ES_URL=localhost:6379
-MF_THINGS_ES_PASS=
-MF_THINGS_ES_DB=0
+MF_THINGS_ES_URL=redis://localhost:6379/0
 MF_THINGS_EVENT_CONSUMER=things
 
 ### HTTP
