--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -131,7 +131,7 @@ services:
       MF_EMAIL_FROM_NAME: ${MF_EMAIL_FROM_NAME}
       MF_EMAIL_BASE_TEMPLATE: ${MF_EMAIL_BASE_TEMPLATE}
       MF_HOST: ${MF_HOST}
-      MF_AUTH_ES_URL: es-redis:${MF_REDIS_TCP_PORT}
+      MF_AUTH_ES_URL: redis://es-redis:${MF_REDIS_TCP_PORT}/0
     ports:
       - ${MF_AUTH_HTTP_PORT}:${MF_AUTH_HTTP_PORT}
       - ${MF_AUTH_GRPC_PORT}:${MF_AUTH_GRPC_PORT}
@@ -235,8 +235,8 @@ services:
       MF_THINGS_DB_USER: ${MF_THINGS_DB_USER}
       MF_THINGS_DB_PASS: ${MF_THINGS_DB_PASS}
       MF_THINGS_DB: ${MF_THINGS_DB}
-      MF_THINGS_CACHE_URL: auth-redis:${MF_REDIS_TCP_PORT}
-      MF_THINGS_ES_URL: es-redis:${MF_REDIS_TCP_PORT}
+      MF_THINGS_CACHE_URL: redis://auth-redis:${MF_REDIS_TCP_PORT}/0
+      MF_THINGS_ES_URL: redis://es-redis:${MF_REDIS_TCP_PORT}/0
       MF_THINGS_HTTP_PORT: ${MF_THINGS_HTTP_PORT}
       MF_THINGS_AUTH_HTTP_PORT: ${MF_THINGS_AUTH_HTTP_PORT}
       MF_THINGS_AUTH_GRPC_PORT: ${MF_THINGS_AUTH_GRPC_PORT}
@@ -323,7 +323,7 @@ services:
       MF_JAEGER_URL: ${MF_JAEGER_URL}
       MF_THINGS_AUTH_GRPC_URL: ${MF_THINGS_AUTH_GRPC_URL}
       MF_THINGS_AUTH_GRPC_TIMEOUT: ${MF_THINGS_AUTH_GRPC_TIMEOUT}
-      MF_AUTH_CACHE_URL: auth-redis:${MF_REDIS_TCP_PORT}
+      MF_AUTH_CACHE_URL: redis://auth-redis:${MF_REDIS_TCP_PORT}/0
       MF_MQTT_ADAPTER_ES_URL: ${MF_MQTT_ADAPTER_ES_URL}
       MF_MQTT_ADAPTER_EVENT_CONSUMER: ${MF_MQTT_ADAPTER_EVENT_CONSUMER}
       MF_MQTT_ADAPTER_DB_PORT: ${MF_MQTT_ADAPTER_DB_PORT}
